edit: Map on Dataset Operations Section
Belirtilen kısımdaki eski anlatımlar yerine yeni anlatımlar yapıldı

--- a/scala/doc/scala_doc_01.ipynb
+++ b/scala/doc/scala_doc_01.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "textFile: org.apache.spark.sql.Dataset[String] = [value: string]\n"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,31 +182,93 @@
    ],
    "source": [
     "textFile.map(line => line.split(\" \").size).reduce((a, b) => if (a > b) a else b)\n",
-    "// Bu işlemi teker teker açıklamak istiyorum\n"
+    "// Bu işlemi teker teker açıklamak istiyorum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+\n",
+      "|value|\n",
+      "+-----+\n",
+      "|    2|\n",
+      "|    1|\n",
+      "|    6|\n",
+      "|    1|\n",
+      "|    5|\n",
+      "+-----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "// map(line => line.split(\" \").size)\n",
+    "\n",
+    "/*\n",
+    "    map: Kendisine parametre olarak verilen fonksiyonu Dataset' teki bütün item' lara uygular\n",
+    "    ve parametre olarak verilen fonksiyonun çıktısını item' in yerine yazar.\n",
+    "\n",
+    "    Map fonksiyonuna parametre olarak verilen fonksiyonu sayıları 2 ile çarpsın. 1, 2, 3 değerlerini\n",
+    "    item olarak tutan Dataset' in map fonksiyonu çıktısı: 2, 4, 6 olur (1 * 2, 2 * 2, 3 * 2).\n",
+    "*/\n",
+    "\n",
+    "/*\n",
+    "    Anonymous Functions: Python' daki lambda function' un Scala karşılığıdır. Bilmeyenler için\n",
+    "    kısa ve isimsiz bir şekilde fonksiyon tanımlama yoludur.\n",
+    "\n",
+    "    val sum = (num1: Int, num2: Int) => num1 + num2\n",
+    "\n",
+    "    sum(5, 6) => çıktı 11' dir.\n",
+    "*/\n",
+    "\n",
+    "/*\n",
+    "    line => line.split(\" \").size\n",
+    "\n",
+    "    Yukarıdaki Anonymous Function kendisine parametre olarak verilen String ifadeyi split fonksiyonu ile\n",
+    "    parçalayıp split fonksiyonunun döndürdüğü Array' in size' ını yani boyutunu return eder.\n",
+    "\n",
+    "*/\n",
+    "\n",
+    "textFile.map(line => line.split(\" \").size).show(numRows=5)\n",
+    "// Dataset item değerlerini String olarak tutar. Bu String tipi Spark' a özel bir String tipi değildir.\n",
+    "// Scala' nın String tipini tutar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Ljava.lang.String;@2a61641c\n",
+      "3\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "res28: String = test\n"
+       "spiled_string: Array[String] = Array(Hello, World!, I, am, Cevat)\n",
+       "arr: Array[String] = Array(test, test2, test3)\n"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "// MAP Fonksiyonu\n",
-    "// Transform yapar.\n",
-    "// Bu fonksiyon kendisine parametre olarak verilen işlemi bütün satırlara ayrı ayrı uygular.\n",
-    "\n",
-    "// line => line.split(\" \").size"
+    "// reduce((a, b) => if (a > b) a else b)\n",
+    "// "
    ]
   },
   {
