edit: More on Dataset Operations

--- a/scala/doc/scala_doc_01.ipynb
+++ b/scala/doc/scala_doc_01.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basic"
+    "### [Basic](https://spark.apache.org/docs/latest/quick-start.html#basics)"
    ]
   },
   {
@@ -20,12 +20,12 @@
    "source": [
     "ENG: Spark’s primary abstraction is a distributed collection of items called a Dataset. Datasets can be created from Hadoop InputFormats (such as HDFS files) or by transforming other Datasets.\n",
     "\n",
-    "TR: Spark' ın `birincil soyutlaması(primary abstraction)` `Dataset`lerdir. `Dataset` dediği şey ise okuduğu dosyadaki `item` olarak kabul ettiği şeylerin kümesidir. `Dataset` HDSF dosyalarından ya da kaynaklardan da oluşturulabilir. `distributed collection of items` bu ifade de ki `distributed` ifadesi ne olabilir bilmiyorum."
+    "TR: Spark' ın `birincil soyutlaması(primary abstraction)` `Dataset`lerdir. `Dataset` dediği şey ise okuduğu dosyadaki `item` olarak kabul ettiği şeylerin kümesidir. `Dataset` HDSF dosyalarından ya da farklı kaynaklardan da oluşturulabilir. `distributed collection of items` bu ifade de ki `distributed` ifadesi ne olabilir bilmiyorum."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,14 +34,14 @@
        "textFile: org.apache.spark.sql.Dataset[String] = [value: string]\n"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "val textFile = spark.read.textFile(\"../README.md\") //Projede bulunan README.md dosyasını okuyoruz.\n",
-    "//text dosyasından yeni bir Dataset oluşturuyoruz.\n",
+    "val textFile = spark.read.textFile(\"../README.md\") //Scala dizininde bulunan README.md dosyasını okuyor.\n",
+    "// Text dosyasından yeni bir Dataset oluşturuyor.\n",
     "\n",
     "// Bir Dataset' ten value alma işlemine action deniyor.\n",
     "// Bir Dataset' ten yeni bir Dataset oluşturmaya da transform deniyor."
@@ -154,28 +154,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### More on Dataset Operations"
+    "### [More on Dataset Operations](https://spark.apache.org/docs/latest/quick-start.html#more-on-dataset-operations)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Action ve Transform işlemlerini kullanarak daha karmaşık hebaplamalar yapılabilir. Mesela elimizdeki Dataset' teki en çok kelime barındıran satırın kaç kelime barındırdığını bulmak istersek:"
+    "Action ve Transform işlemlerini kullanarak daha karmaşık hesaplamalar yapılabilir. Mesela elimizdeki Dataset' teki en çok kelime barındıran satırın kaç kelime barındırdığını bulmak istersek:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res25: Int = 12\n"
+       "res1: Int = 12\n"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,13 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[value: int]\n",
       "+-----+\n",
       "|value|\n",
       "+-----+\n",
@@ -206,6 +207,16 @@
       "only showing top 5 rows\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "textFileLineWordCount: org.apache.spark.sql.Dataset[Int] = [value: int]\n"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -215,7 +226,7 @@
     "    map: Kendisine parametre olarak verilen fonksiyonu Dataset' teki bütün item' lara uygular\n",
     "    ve parametre olarak verilen fonksiyonun çıktısını item' in yerine yazar.\n",
     "\n",
-    "    Map fonksiyonuna parametre olarak verilen fonksiyonu sayıları 2 ile çarpsın. 1, 2, 3 değerlerini\n",
+    "    Map fonksiyonuna parametre olarak verilen fonksiyon sayıları 2 ile çarpsın. 1, 2, 3 değerlerini\n",
     "    item olarak tutan Dataset' in map fonksiyonu çıktısı: 2, 4, 6 olur (1 * 2, 2 * 2, 3 * 2).\n",
     "*/\n",
     "\n",
@@ -224,6 +235,8 @@
     "    kısa ve isimsiz bir şekilde fonksiyon tanımlama yoludur.\n",
     "\n",
     "    val sum = (num1: Int, num2: Int) => num1 + num2\n",
+    "\n",
+    "    Okun sol tarafı fonksiyonun parametreleridir. Sağ tarafı ise return değeridir.\n",
     "\n",
     "    sum(5, 6) => çıktı 11' dir.\n",
     "*/\n",
@@ -236,39 +249,56 @@
     "\n",
     "*/\n",
     "\n",
-    "textFile.map(line => line.split(\" \").size).show(numRows=5)\n",
-    "// Dataset item değerlerini String olarak tutar. Bu String tipi Spark' a özel bir String tipi değildir.\n",
-    "// Scala' nın String tipini tutar."
+    "val textFileLineWordCount = textFile.map(line => line.split(\" \").size)\n",
+    "\n",
+    "println(textFileLineWordCount) // textFileLineWordCount Dataset' indeki item' ların type' ları int' tir.\n",
+    "\n",
+    "textFileLineWordCount.show(numRows=5)\n",
+    "// textFile Dataset' inde item değerleri String' tir(textFile' ı okuduğumuz cell' e bakın).\n",
+    "// Bu String tipi Spark' a özel bir String tipi değildir.\n",
+    "// Scala' nın String type' ıdır."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Ljava.lang.String;@2a61641c\n",
-      "3\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "spiled_string: Array[String] = Array(Hello, World!, I, am, Cevat)\n",
-       "arr: Array[String] = Array(test, test2, test3)\n"
+       "res2: Int = 12\n"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "// reduce((a, b) => if (a > b) a else b)\n",
-    "// "
+    "\n",
+    "/*\n",
+    "    reduce: map gibi parametre olarak fonksiyon alır. Parametre olarak aldığı fonksiyonun iki parametresi ve tek return' ü\n",
+    "    olmalıdır.\n",
+    "\n",
+    "    reduce kelime anlamı olarak azaltmak demek. Dataset' teki item' ları ikişer olarak ele alıp belirli işlemleri\n",
+    "    uygulamaya yarar. Max, Min vb. işlemlerdir.\n",
+    "\n",
+    "*/\n",
+    "\n",
+    "/*\n",
+    "    (a, b) => if (a > b) a else b\n",
+    "\n",
+    "    Yukarıdaki ifade bir Anonymous Function'dır ve kendisine parametre olarak verilen iki değerden en büyüğünü\n",
+    "    return eder.\n",
+    "*/\n",
+    "\n",
+    "// reduce((a, b) => if (a > b) a else b)\n",
+    "// Yukarıdaki işlem item' ları ikişer ikişer karşılaştırarak en büyük değer olanı elde etmeye yarar.\n",
+    "// Tam olarak çalışma mantığı nasıldır bilmiyorum.\n",
+    "\n",
+    "textFile.map(line => line.split(\" \").size).reduce((a, b) => if (a > b) a else b)"
    ]
   },
   {
@@ -289,152 +319,16 @@
     }
    ],
    "source": [
-    "// map ve reduce fonksiyonlarının argümanları Scala funtion literals (closures) özelliğindedir. [Python'daki iterator]\n",
-    "// Bu yüzden bu fonksiyonlar herhangi bir language feature ya da Scala/ Java kütüphanesinden \n",
-    "// belirli feature' i alabilir. Mesela yukarıdaki işlemi daha okunabilir yapalım.\n",
     "import java.lang.Math\n",
     "\n",
-    "textFile.map(line => line.split(\" \").size).reduce((a,b) => Math.max(a, b))"
+    "textFile.map(line => line.split(\" \").size).reduce((a,b) => Math.max(a, b))\n",
+    "// Okunurluğu ya da verimliliği arttırmak için Scala dilinin destekleklediği her şey kullanılabilir.\n",
+    "// Math.max"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "textFile' daki item sayısı: 8\n",
-      "+--------------------+\n",
-      "|               value|\n",
-      "+--------------------+\n",
-      "|            ## Giriş|\n",
-      "|                    |\n",
-      "|Apache Spark ile ...|\n",
-      "|                    |\n",
-      "|~~Apache Spark' ı...|\n",
-      "|                    |\n",
-      "|                    |\n",
-      "|Scala kullanmaya ...|\n",
-      "+--------------------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "// Tam olarak ne yaptığını  görmek istiyorum.\n",
-    "println(\"textFile' daki item sayısı: \" + textFile.count())\n",
-    "textFile.show() // README.md dosyasındaki satırları görüyorsunuz. README.md dosyasında toplamda 8 satır var.\n",
-    "// Hiç bir şey yazmayan satırlarıda item olarak alıyor."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tempDataset' teki item sayısı: 8\n",
-      "+--------------------+\n",
-      "|               value|\n",
-      "+--------------------+\n",
-      "|         [##, Giriş]|\n",
-      "|                  []|\n",
-      "|[Apache, Spark, i...|\n",
-      "|                  []|\n",
-      "|[~~Apache, Spark'...|\n",
-      "|                  []|\n",
-      "|                  []|\n",
-      "|[Scala, kullanmay...|\n",
-      "+--------------------+\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tempDataset: org.apache.spark.sql.Dataset[Array[String]] = [value: array<string>]\n"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "var tempDataset = textFile.map(line => line.split(\" \"))\n",
-    "println(\"tempDataset' teki item sayısı: \" + tempDataset.count())\n",
-    "tempDataset.show() //map ile transform, show ile action."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----+\n",
-      "|value|\n",
-      "+-----+\n",
-      "|    2|\n",
-      "|    1|\n",
-      "|    6|\n",
-      "|    1|\n",
-      "|   22|\n",
-      "|    1|\n",
-      "|    1|\n",
-      "|   10|\n",
-      "+-----+\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "newTextFileDataset: org.apache.spark.sql.Dataset[Int] = [value: int]\n"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "val newTextFileDataset = textFile.map(line => line.split(\" \").size) // map ile transform, show ile action\n",
-    "newTextFileDataset.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "res27: Int = 22\n"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "newTextFileDataset.reduce((a, b) => if (a > b) a else b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +337,7 @@
        "wordCounts: org.apache.spark.sql.Dataset[(String, Long)] = [key: string, count(1): bigint]\n"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,8 +346,93 @@
     "// One common data flow pattern is MapReduce, as popularized by Hadoop. Spark can implement MapReduce flows easily\n",
     "val wordCounts = textFile.flatMap(line => line.split(\" \")).groupByKey(identity).count()\n",
     "\n",
-    "// flat map ile satır Dataset' i olan textFile' ı kelime datasetine çeviriyor. \n",
-    "// groupByKey ve count ile kelimelerin sayısını elde ediliyor."
+    "// Yukarıdaki işlemi teker teker anlatmak istiyorum."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|               value|\n",
+      "+--------------------+\n",
+      "|      [##, Açıklama]|\n",
+      "|                  []|\n",
+      "|[ScalaSpark, ile,...|\n",
+      "|                  []|\n",
+      "|[###, Klasör, isi...|\n",
+      "+--------------------+\n",
+      "only showing top 5 rows\n",
+      "\n",
+      "+----------+\n",
+      "|     value|\n",
+      "+----------+\n",
+      "|        ##|\n",
+      "|  Açıklama|\n",
+      "|          |\n",
+      "|ScalaSpark|\n",
+      "|       ile|\n",
+      "+----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "// flatMap(line => line.split(\" \"))\n",
+    "\n",
+    "/*\n",
+    "    flatMap: map fonksiyonu ile farklı şu. Dataset' in kaç item' ı varsa map fonksiyonunun çıktısı olan Dataset' de\n",
+    "    o kadar item' a sahiptir. flatMap' te ise ya aynı sayıda item' a ya da daha fazla sayıda item' a sahip olur.\n",
+    "\n",
+    "    Eğer flatMap' e parametre olarak verilen fonksiyonun çıktısı tek bir değer dönüyorsa map gibi çalışır fakat\n",
+    "    birden fazla değer dönüyorsa dönülen her değer yeni Dataset' te item olur.\n",
+    "    \n",
+    "*/\n",
+    "\n",
+    "\n",
+    "textFile.map(line => line.split(\" \")).show(numRows=5)\n",
+    "textFile.flatMap(line => line.split(\" \")).show(numRows=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "<console>",
+     "evalue": "28: error: overloaded method value groupByKey with alternatives:",
+     "output_type": "error",
+     "traceback": [
+      "<console>:28: error: overloaded method value groupByKey with alternatives:",
+      "  [K](func: org.apache.spark.api.java.function.MapFunction[(String, Int),K], encoder: org.apache.spark.sql.Encoder[K])org.apache.spark.sql.KeyValueGroupedDataset[K,(String, Int)] <and>",
+      "  [K](func: ((String, Int)) => K)(implicit evidence$3: org.apache.spark.sql.Encoder[K])org.apache.spark.sql.KeyValueGroupedDataset[K,(String, Int)]",
+      " cannot be applied to ()",
+      "       textFile.flatMap(line => line.split(\" \")).map(word => (word, 1)).groupByKey().count()",
+      "                                                                        ^",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "// groupByKey(identity)\n",
+    "\n",
+    "/*\n",
+    "    identity: identity bir Scala fonksiyonudur. Kendine parametre olarak verilen değeri return eder.\n",
+    "    \n",
+    "    identity(5) => 5 döner.\n",
+    "*/\n",
+    "\n",
+    "/*\n",
+    "    groupByKey: Bu fonksiyon (K,V) pair' larını grouplamaya yarar.\n",
+    "\n",
+    "*/"
    ]
   },
   {
