complete: More on Dataset Operations

--- a/scala/doc/scala_doc_01.ipynb
+++ b/scala/doc/scala_doc_01.ipynb
@@ -224,10 +224,11 @@
     "\n",
     "/*\n",
     "    map: Kendisine parametre olarak verilen fonksiyonu Dataset' teki bütün item' lara uygular\n",
-    "    ve parametre olarak verilen fonksiyonun çıktısını item' in yerine yazar.\n",
+    "    ve Dataset' ten yeni bir Dataset oluşturur. Yeni oluşturduğu Dataset' in item değerleri\n",
+    "    olarak kendisine parametre olarak verilen fonksiyonun çıktısını yazar.\n",
     "\n",
-    "    Map fonksiyonuna parametre olarak verilen fonksiyon sayıları 2 ile çarpsın. 1, 2, 3 değerlerini\n",
-    "    item olarak tutan Dataset' in map fonksiyonu çıktısı: 2, 4, 6 olur (1 * 2, 2 * 2, 3 * 2).\n",
+    "    Map fonksiyonuna parametre olarak verilen fonksiyon sayıları 2 ile çarpsın. `1, 2, 3` değerlerini\n",
+    "    item olarak tutan Dataset' in map fonksiyonu çıktısı: `2, 4, 6` olur (1 * 2, 2 * 2, 3 * 2).\n",
     "*/\n",
     "\n",
     "/*\n",
@@ -251,7 +252,7 @@
     "\n",
     "val textFileLineWordCount = textFile.map(line => line.split(\" \").size)\n",
     "\n",
-    "println(textFileLineWordCount) // textFileLineWordCount Dataset' indeki item' ların type' ları int' tir.\n",
+    "println(textFileLineWordCount) // textFileLineWordCount Dataset' indeki item' ların type' ları int' tir. Out kısmında bakın.\n",
     "\n",
     "textFileLineWordCount.show(numRows=5)\n",
     "// textFile Dataset' inde item değerleri String' tir(textFile' ı okuduğumuz cell' e bakın).\n",
@@ -283,7 +284,7 @@
     "    olmalıdır.\n",
     "\n",
     "    reduce kelime anlamı olarak azaltmak demek. Dataset' teki item' ları ikişer olarak ele alıp belirli işlemleri\n",
-    "    uygulamaya yarar. Max, Min vb. işlemlerdir.\n",
+    "    uygulamaya yarar. Max, Min vb. işlemlerdir. reduce işlemini tam olarak nasıl yapar bilmiyorum.\n",
     "\n",
     "*/\n",
     "\n",
@@ -296,7 +297,6 @@
     "\n",
     "// reduce((a, b) => if (a > b) a else b)\n",
     "// Yukarıdaki işlem item' ları ikişer ikişer karşılaştırarak en büyük değer olanı elde etmeye yarar.\n",
-    "// Tam olarak çalışma mantığı nasıldır bilmiyorum.\n",
     "\n",
     "textFile.map(line => line.split(\" \").size).reduce((a, b) => if (a > b) a else b)"
    ]
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -381,13 +381,23 @@
       "only showing top 5 rows\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "flatTextFile: org.apache.spark.sql.Dataset[String] = [value: string]\n"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "// flatMap(line => line.split(\" \"))\n",
     "\n",
     "/*\n",
-    "    flatMap: map fonksiyonu ile farklı şu. Dataset' in kaç item' ı varsa map fonksiyonunun çıktısı olan Dataset' de\n",
+    "    flatMap: map fonksiyonu ile farkı şu: Dataset' in kaç item' ı varsa map fonksiyonunun çıktısı olan Dataset' de\n",
     "    o kadar item' a sahiptir. flatMap' te ise ya aynı sayıda item' a ya da daha fazla sayıda item' a sahip olur.\n",
     "\n",
     "    Eğer flatMap' e parametre olarak verilen fonksiyonun çıktısı tek bir değer dönüyorsa map gibi çalışır fakat\n",
@@ -396,30 +406,16 @@
     "*/\n",
     "\n",
     "\n",
-    "textFile.map(line => line.split(\" \")).show(numRows=5)\n",
-    "textFile.flatMap(line => line.split(\" \")).show(numRows=5)"
+    "textFile.map(line => line.split(\" \")).show(numRows=5) // map\n",
+    "val flatTextFile = textFile.flatMap(line => line.split(\" \")) //flatMap\n",
+    "flatTextFile.show(numRows=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "<console>",
-     "evalue": "28: error: overloaded method value groupByKey with alternatives:",
-     "output_type": "error",
-     "traceback": [
-      "<console>:28: error: overloaded method value groupByKey with alternatives:",
-      "  [K](func: org.apache.spark.api.java.function.MapFunction[(String, Int),K], encoder: org.apache.spark.sql.Encoder[K])org.apache.spark.sql.KeyValueGroupedDataset[K,(String, Int)] <and>",
-      "  [K](func: ((String, Int)) => K)(implicit evidence$3: org.apache.spark.sql.Encoder[K])org.apache.spark.sql.KeyValueGroupedDataset[K,(String, Int)]",
-      " cannot be applied to ()",
-      "       textFile.flatMap(line => line.split(\" \")).map(word => (word, 1)).groupByKey().count()",
-      "                                                                        ^",
-      ""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "// groupByKey(identity)\n",
     "\n",
@@ -429,191 +425,150 @@
     "    identity(5) => 5 döner.\n",
     "*/\n",
     "\n",
-    "/*\n",
-    "    groupByKey: Bu fonksiyon (K,V) pair' larını grouplamaya yarar.\n",
+    "// groupByKey ifadesini örnek ile anlatacağım."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+------+\n",
+      "|class|number|\n",
+      "+-----+------+\n",
+      "|    A|    -5|\n",
+      "|    A|    -5|\n",
+      "|    A|    -5|\n",
+      "|    B|    -4|\n",
+      "|    C|    -3|\n",
+      "+-----+------+\n",
+      "only showing top 5 rows\n",
+      "\n",
+      "+---+--------+\n",
+      "|key|count(1)|\n",
+      "+---+--------+\n",
+      "| 5A|       3|\n",
+      "| 4B|       1|\n",
+      "| 3C|       2|\n",
+      "| 2D|       1|\n",
+      "| 1F|       1|\n",
+      "+---+--------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "columns: Seq[String] = List(class, number)\n",
+       "data: Seq[(String, Int)] = List((A,-5), (A,-5), (A,-5), (B,-4), (C,-3), (C,-3), (D,-2), (F,-1), (H,0), (H,0), (H,0), (H,0), (H,0), (K,1), (K,1), (K,1), (K,1), (L,2), (L,2), (M,3), (S,4), (T,5))\n",
+       "df: org.apache.spark.sql.DataFrame = [class: string, number: int]\n",
+       "groupedDf: org.apache.spark.sql.Dataset[(String, Long)] = [key: string, count(1): bigint]\n"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// İlk önce bir Dataset oluşturalım. Aşağıdaki gibi bir Dataset oluşturduğumuzda item' ın tipi\n",
+    "// Dataset[Row] olur. Yukarıdaki örnekte ise Dataset[String]' ti. Bu bilgi önemli.\n",
     "\n",
-    "*/"
+    "// Data oluşturma\n",
+    "val columns = Seq(\"class\" ,\"number\")\n",
+    "val data = Seq(\n",
+    "    (\"A\", -5), (\"A\", -5), (\"A\", -5), (\"B\", -4), (\"C\", -3), (\"C\", -3), (\"D\", -2), (\"F\", -1), \n",
+    "    (\"H\", 0), (\"H\", 0), (\"H\", 0), (\"H\", 0), (\"H\", 0), (\"K\", 1), (\"K\", 1), (\"K\", 1), (\"K\", 1), \n",
+    "    (\"L\", 2), (\"L\", 2), (\"M\", 3), (\"S\", 4), (\"T\", 5)\n",
+    ")\n",
+    "\n",
+    "val df = spark.sparkContext.parallelize(data).toDF(columns:_*) // _* ne demek bilmiyorum.\n",
+    "df.show(numRows=5)\n",
+    "// Cell' in Out kısmına bakarsanız df' in DataFrame olduğunu görürsünüz. DataFrame demek Dataset[Row] demektir.\n",
+    "\n",
+    "val groupedDf = df.groupByKey(row => (row.getInt(1)).abs + row.getString(0)).count()\n",
+    "/*\n",
+    "    row => (row.getInt(1)).abs + row.getString(0)\n",
+    "\n",
+    "    (\"A\", -5) item' ımız olsun. Bu işlemde yapılan her şey Dataset' teki bütün item' lara uygulanır.\n",
+    "\n",
+    "    row.getInt(1).abs => {\n",
+    "        row.getInt(1) bu değer -5 değer\n",
+    "        abs ile -5 değerinin mutlak değeri alınır yani 5 olur\n",
+    "    }\n",
+    "    NOT: getInt olmasının sebebi Dataset' teki item' lar Row nesnesi cinsinden tutulduğu içindir. 1 değerinin\n",
+    "    anlamı ise Int değerinin Row' un `1.` kolonunda olmasından.\n",
+    "\n",
+    "    row.getString(0) => {\n",
+    "        A değeri çekilmiş olur.\n",
+    "    }\n",
+    "\n",
+    "    Sonuç olarak 5A değeri elde edilir ve bu değer yeni Dataset' in item değeri olarak yazılır. Kolon adı ise\n",
+    "    key olur. Cell' deki ikinci çıktıya bakınız.\n",
+    "\n",
+    "    Yukarıdaki işlem bütün item' lara uygulanır ve elde edilen Dataset' üzerinde key kolonu için groupBy işlemi uygulanır.\n",
+    "*/\n",
+    "\n",
+    "/*\n",
+    "    count: count bir aggregation işlemidir ve gruplanan ifadelerin kaç tane olduğunu bize verir.\n",
+    "*/\n",
+    "\n",
+    "groupedDf.show(numRows=5) // Görmek için ikinci çıktıya bakınız."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res2: Array[(String, Long)] = Array((şekilde,1), (ı,1), (notlarımı,1), (Giriş,1), (Sistemi,1), (kullanmaya,1), (olarakta,1), (~~Apache,1), (yapabiliyormuşuz.,1), (verdim.,2), (Linux,1), (kullanmaktayım.,1), (dağıtım,1), (Apache,1), (olarak,1), (bu,1), (işlemleri,1), (Ubuntu,1), (Scala,1), (yazmaya,1), (İşletim,1), (yaptım.~~,1), (PySpark,1), (ile,3), (Python,1), (Spark',1), (##,1), (Spark,1), (ilgili,1), (Jupyter,1), (\"\",4), (tutacağım.,1), (karar,2), (kullandım.,1), ([şu](./kurulum.md),1), (notebook,1), (Kurulumu,1))\n"
+       "wordCounts: org.apache.spark.sql.Dataset[(String, Long)] = [key: string, count(1): bigint]\n"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wordCounts.collect()"
+    "val wordCounts = textFile.flatMap(line => line.split(\" \")).groupByKey(identity).count()\n",
+    "// Yukarıdaki işlem groupBy ile de yapabilir lakin böyle bir şey tercih edilmiş.\n",
+    "\n",
+    "/*\n",
+    "Yukarıdaki işlemde ise flatMap fonksiyonun kendisi tek kolonlu bir Dataset döndürür: Dataset[String]. Bu Dataset' e DatasetA diyeceğim.\n",
+    "\n",
+    "Yukarıdaki işlem => {\n",
+    "    DatasetA' daki bütün item' lara teker teker identity fonksiyonu uygulanır ve yeni bir Dataset elde edilir: DatasetB\n",
+    "    DatasetB' de key kolonuna göre gruplanıp count alınır.\n",
+    "}\n",
+    "*/\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "textFile item count: 8\n",
-      "+--------------------+\n",
-      "|               value|\n",
-      "+--------------------+\n",
-      "|            ## Giriş|\n",
-      "|                    |\n",
-      "|Apache Spark ile ...|\n",
-      "|                    |\n",
-      "|~~Apache Spark' ı...|\n",
-      "|                    |\n",
-      "|                    |\n",
-      "|Scala kullanmaya ...|\n",
-      "+--------------------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "println(\"textFile item count: \" + textFile.count())\n",
-    "textFile.show() // textFile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wordDataset item count: 44\n",
-      "+----------+\n",
-      "|     value|\n",
-      "+----------+\n",
-      "|        ##|\n",
-      "|     Giriş|\n",
-      "|          |\n",
-      "|    Apache|\n",
-      "|     Spark|\n",
-      "|       ile|\n",
-      "|    ilgili|\n",
-      "| notlarımı|\n",
-      "|tutacağım.|\n",
-      "|          |\n",
-      "|  ~~Apache|\n",
-      "|    Spark'|\n",
-      "|         ı|\n",
-      "|    Python|\n",
-      "|       ile|\n",
-      "|   yazmaya|\n",
-      "|     karar|\n",
-      "|   verdim.|\n",
-      "|   PySpark|\n",
-      "|kullandım.|\n",
-      "+----------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "wordDataset: org.apache.spark.sql.Dataset[String] = [value: string]\n"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "// Şimdi yukarıdaki işlemleri teker teker yapalım\n",
-    "val wordDataset = textFile.flatMap(line => line.split(\" \"))\n",
-    "println(\"wordDataset item count: \" + wordDataset.count())\n",
-    "wordDataset.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------------+--------+\n",
-      "|              key|count(1)|\n",
-      "+-----------------+--------+\n",
-      "|          şekilde|       1|\n",
-      "|                ı|       1|\n",
-      "|        notlarımı|       1|\n",
-      "|            Giriş|       1|\n",
-      "|          Sistemi|       1|\n",
-      "|       kullanmaya|       1|\n",
-      "|         olarakta|       1|\n",
-      "|         ~~Apache|       1|\n",
-      "|yapabiliyormuşuz.|       1|\n",
-      "|          verdim.|       2|\n",
-      "|            Linux|       1|\n",
-      "|  kullanmaktayım.|       1|\n",
-      "|          dağıtım|       1|\n",
-      "|           Apache|       1|\n",
-      "|           olarak|       1|\n",
-      "|               bu|       1|\n",
-      "|        işlemleri|       1|\n",
-      "|           Ubuntu|       1|\n",
-      "|            Scala|       1|\n",
-      "|          yazmaya|       1|\n",
-      "+-----------------+--------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "workDatasetKeyCountPair: org.apache.spark.sql.Dataset[(String, Long)] = [key: string, count(1): bigint]\n"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "val workDatasetKeyCountPair = wordDataset.groupByKey(identity).count() // Burada tam olarak nasıl key count\n",
-    "// yapıyor anlamadım. Çıktı falan da göremediğim için nasıl yapıyor diye bir mantık kuramadım.\n",
-    "workDatasetKeyCountPair.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res17: Array[(String, Long)] = Array((şekilde,1), (ı,1), (notlarımı,1), (Giriş,1), (Sistemi,1), (kullanmaya,1), (olarakta,1), (~~Apache,1), (yapabiliyormuşuz.,1), (verdim.,2), (Linux,1), (kullanmaktayım.,1), (dağıtım,1), (Apache,1), (olarak,1), (bu,1), (işlemleri,1), (Ubuntu,1), (Scala,1), (yazmaya,1), (İşletim,1), (yaptım.~~,1), (PySpark,1), (ile,3), (Python,1), (Spark',1), (##,1), (Spark,1), (ilgili,1), (Jupyter,1), (\"\",4), (tutacağım.,1), (karar,2), (kullandım.,1), ([şu](./kurulum.md),1), (notebook,1), (Kurulumu,1))\n"
+       "res7: Array[(String, Long)] = Array((Okuduğum,1), ([Jupyter,1), ([Read,1), (dökümanlar,1), ([install](scala/install),1), (code,1), (işlemler:,1), (*,7), (Interactive,1), (--------,1), (with,1), (barındıran,1), (RDD,1), (Analysis,1), (Kurulumlar,1), (Programming,1), (yazma:,1), (açıklama,1), (klasör.,1), (notebook',1), (okuma,,1), (doc,1), (Shell](scala/doc/scala_doc_01.ipynb),1), (dosyaları,1), (|,5), ([SparkDoc:,2), (------,1), (Linkler,1), (Başka,1), (iligli,1), (the,1), (ScalaSpark,1), (ve,1), (Belirli,1), (kaynak](https://medium.com/@bogdan.cojocar/how-to-run-scala-and-spark-in-the-jupyter-notebook-328a80090b3b),1), ([code](scala/code),1), (yazma,1), (and,1), (Scala,1), (barındırdıkları,1), (JSON,1), ([doc](scala/doc),1), (ile,1), (###,1), (install,1), (##,2), (klasör,1), (ta,1), (S...\n"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "workDatasetKeyCountPair.collect()"
+    "wordCounts.collect() // Dataset' i bir Array' a dönüştüren fonksiyon."
    ]
   },
   {
