done: scala_doc_01

--- a/scala/doc/scala_doc_01.ipynb
+++ b/scala/doc/scala_doc_01.ipynb
@@ -575,51 +575,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Caching\n",
+    "### [Caching](https://spark.apache.org/docs/latest/quick-start.html#caching)\n",
     "\n",
-    "Bu kısmı tam olarak anlamadım.\n",
-    "\n",
-    "Spark bildiğim kadarıyla verileri RAM' a alarak işliyor. Hadoop' tan farkı buradan ortaya çıkıyor. Hadoop verileri Disk üzerinden işler Spark ise RAM üzerinden veriler üzerinden işlem yapar."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "res3: lineWithSpark.type = [value: string]\r\n"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lineWithSpark.cache() // Şuan veriler cache' e alındı"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "res4: Long = 2\r\n"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lineWithSpark.count()"
+    "Bu kısmı tam olarak anlamadım. Araştırıp detaylı olarak yazmayı düşünüyorum"
    ]
   },
   {
@@ -628,7 +586,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Self-Contained Applications diye bir kısım vardı. Ona bakmadım. Scala projesinde Spark kullanmayı gösteriyor sanırım"
+    "// Self-Contained Applications diye bir kısım vardı. Ona bakmadım."
    ]
   }
  ],
